# AirSimClient_Python

./: .env  .gitignore  README.md  cli.py  main.py  pyproject.toml  settings.json  yield_control.py
.github/: copilot-instructions.md
RL/: dqn_car.py
RL/airgym/: __init__.py
RL/airgym/envs/: __init__.py  airsim_env.py  car_env.py
examples/: capture_data.py  car_capture_images.py  car_collision.py  car_lidar.py  car_lidar_simple.py  car_monitor.py  car_stress_test.py  car_time_of_day.py  drive_straight.py  hello_car.py  pause_continue_car.py  pause_test.py  reset_test_car.py  runtime_car.py  setup_path.py
scripts/: recognize_camera_yolo.py  recognize_lidar.py
