[project]
name = "airsimclient-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "airsim>=1.8.1",
    "backports-ssl-match-hostname>=3.7.0.1",
    "msgpack-rpc-python>=0.4.1",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "setuptools>=80.9.0",
    "tornado<5",
    "typer>=0.16.0",
    "wheel>=0.45.1",
]

[project.scripts]
airsim-cli = "cli:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["cli", "main", "yield_control"]
