[project]
name = "airsimclient-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "airsim>=1.8.1",
    "backports-ssl-match-hostname>=3.7.0.1",
    "msgpack-rpc-python>=0.4.1",
    "numpy>=2.3.2",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "matplotlib>=3.9.0",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "setuptools>=80.9.0",
    "tornado<5",
    "typer>=0.16.0",
    "ultralytics>=8.3.0",
    "wheel>=0.45.1",
    "stable-baselines3[extra]>=2.7.0",
]

[project.scripts]
airsim-cli = "cli:main"

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["cli", "main", "yield_control"]
